...
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="Total Price for Items"
                />

            <EditText
                android:id="@+id/priceOfItemsSoldEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:width="50dp"
                android:ems="10"
                android:inputType="numberDecimal"/>
...


                android:textAlignment="center"/>


            <TextView
                android:id="@+id/vipDiscountPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="right"
                android:text="$0.00"/>

        </TableRow>

        <TableRow>

            <TextView
...


                android:textAlignment="center"/>


            <TextView
                android:id="@+id/rewardsAppliedPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="right"
                android:text="$0.00"/>

...
                android:id="@+id/totalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="Total Price"


                android:textAlignment="center"/>


            <TextView
                android:id="@+id/totalPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="right"
                android:text="$0.00"/>

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/chargeCreditCardButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tableLayout"
                android:layout_centerHorizontal="true"
                android:layout_span="3"
                android:text="Charge Credit Card"/>

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/buildTransactionErrorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="115dp"
...
