...
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="Customer"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <Button
            android:id="@+id/startTransaction"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/customerTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="Start Transaction"/>

        <Button
            android:id="@+id/viewEditCustomer"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/startTransaction"
            android:layout_alignStart="@+id/startTransaction"
            android:layout_below="@+id/startTransaction"
            android:layout_marginTop="30dp"
...
