...

    <TextView
        android:id="@+id/transactionAmountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="$5.00"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/transactionDiscountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
