...
        android:id="@+id/chargeSuccessAmountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chargeSuccessText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="$1.00"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/chargeSuccessText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
